solving naviagtion bar issue on mobile devices

--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -39,6 +39,11 @@
     margin-right: -25px;
     background-color: #ffffff;
     left: 0;
+    transition: transform 0.3s ease-in-out; // Added transition property
+
+    &.menu-open {
+      transform: scale(0.8); // Adjust the scale value as per your desired effect
+    }
   }
 
   .blue-shape {
@@ -48,14 +53,32 @@
 
   @media (max-width: 767px) {
     .logo {
-      height: 40px;
-      width: 40px;
+      height: 60px;
+      width: 170px;
       margin-right: 10px;
       background-color: #ffffff;
+    }
+    .tab {
+      text-decoration: none !important;
     }
     .nav-links {
       flex-direction: column;
       align-items: flex-end;
     }
+
+    .menu-icon {
+      color: rgb(23, 23, 136);
+      transition: transform 0.3s ease-in-out;
+      width: 40px;
+      height: auto;
+
+      &.menu-open {
+        transform: rotate(45deg);
+      }
+    }
   }
+}
+
+.css-hip9hq-MuiPaper-root-MuiAppBar-root {
+  box-shadow: none !important;
 }
